crates/cypher-sema/src/snapshots/cypher_sema__schema_aware__tests__schema_function_arity_mismatch_error.snap
---
source: crates/cypher-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 1
  E3007: function `size` expects exactly 1 argument(s) but got 2
