crates/cypher-sema/src/snapshots/cypher_sema__schema_aware__tests__schema_known_node_prop_ok.snap
---
source: crates/cypher-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 0
