crates/cypher-sema/src/snapshots/cypher_sema__schema_aware__tests__schema_one_of_two_labels_unknown.snap
---
source: crates/cypher-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 1
  E3001: unknown label `:Ghost`
