crates/cypher-sema/src/snapshots/cypher_sema__schema_aware__tests__schema_rel_prop_type_mismatch_error.snap
---
source: crates/cypher-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 1
  E3004: property `since` expects type `Int` but got `String`
