crates/cypher-sema/src/snapshots/cypher_sema__schema_aware__tests__schema_unknown_function_error.snap
---
source: crates/cypher-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 1
  E3006: unknown function `totally_unknown_fn`
