crates/cypher-sema/src/snapshots/cypher_sema__schema_aware__tests__schema_unknown_rel_prop_error.snap
---
source: crates/cypher-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 1
  E3003: property `unknown_key` is not declared on relationship type(s) :KNOWS
